--- a/all.css
+++ b/all.css
@@ -49,7 +49,7 @@ table {
 @import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
 .wrap{
     margin: 0 auto;
-    width: 1920px;
+    max-width: 1920px;
 }
 .font1{
     font-family: "Noto Sans TC";
